Alignment fixed.

--- a/pages-styles/assets/styles/style.css
+++ b/pages-styles/assets/styles/style.css
@@ -21,6 +21,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   min-height: 100vh;
+  text-align: center;
 }
 
 .main-menu-button {
@@ -85,8 +86,8 @@ img {
   display: block;
   max-width:700px;
   max-height:1100px;
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
 }
 
 /*
